# rustfarm

./: .gitignore  Cargo.toml  README.md  log.txt  main.py  requirements.txt
src/: main.rs
src/daemons/: input.rs  mod.rs  robot.rs  tui.rs
src/games/: mod.rs  siege.rs
src/helper/: lib.rs  mod.rs  rsauto.rs
