[package]
name = "rustfarm"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1.0.86"
crossterm = "0.27.0"
image = "0.24.6"
rand = "0.8.5"
rdev = "0.5.3"
spectrust = "0.2.0"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
tui = "0.19.0"
winapi = { version = "0.3.9", features = [ "impl-default" ] }

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"